--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <audio src="MUSIC.mp3" autoplay loop></audio>
+  <audio src="MUSIC.mp3" controls loop></audio>
   <iframe src="https://indd.adobe.com/view/f80d6263-4879-4273-bd4e-02859c3fbdc9" title="ENERO ISYU" width="1920" height="800"></iframe>
 </body>
 </html>
