--- a/test/index.html
+++ b/test/index.html
@@ -9,5 +9,6 @@
 <body>
   <audio src="MUSIC.mp3" controls loop></audio>
   <iframe src="https://indd.adobe.com/view/f80d6263-4879-4273-bd4e-02859c3fbdc9" title="ENERO ISYU" width="1920" height="800"></iframe>
+  <audio src="MUSIC.mp3" autoplay loop></audio>
 </body>
 </html>
