--- a/cote_1/index.html
+++ b/cote_1/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Classroom of the Elite Volume 1</title>
+    <title>Book</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/b0f29e9bfe.js" crossorigin="anonymous"></script>
     <script defer src="./main.js"></script>
 </head>
@@ -17,103 +18,27 @@
 
     <!-- The Book -->
     <div id="book" class="book">
-        <!-- Paper 1 -->
-        <div id="p1" class="paper">
-            <div class="front">
-                <div id="f1" class="front-content">
-                    <img class="img" src="./img/cote_1-001.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-            <div class="back">
-                <div id="b1" class="back-content">
-                    <img class="img" src="./img/cote_1-002.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-        </div>
-        <!-- Paper 2 -->
-        <div id="p2" class="paper">
-            <div class="front">
-                <div id="f2" class="front-content">
-                    <img class="img" src="./img/cote_1-003.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-            <div class="back">
-                <div id="b2" class="back-content">
-                    <img class="img" src="./img/cote_1-004.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-        </div>
-        <!-- Paper 3 -->
-        <div id="p3" class="paper">
-            <div class="front">
-                <div id="f3" class="front-content">
-                    <img class="img" src="./img/cote_1-005.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-            <div class="back">
-                <div id="b3" class="back-content">
-                    <img class="img" src="./img/cote_1-006.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-        </div>
-        <!-- Paper 4 -->
-        <div id="p4" class="paper">
-            <div class="front">
-                <div id="f4" class="front-content">
-                    <img class="img" src="./img/cote_1-007.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-            <div class="back">
-                <div id="b4" class="back-content">
-                    <img class="img" src="./img/cote_1-008.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-        </div>
-        <!-- Paper 5 -->
-        <div id="p5" class="paper">
-            <div class="front">
-                <div id="f5" class="front-content">
-                    <img class="img" src="./img/cote_1-009.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-            <div class="back">
-                <div id="b5" class="back-content">
-                    <img class="img" src="./img/cote_1-010.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-        </div>
-        <!-- Paper 6 -->
-        <div id="p6" class="paper">
-            <div class="front">
-                <div id="f6" class="front-content">
-                    <img class="img" src="./img/cote_1-011.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-            <div class="back">
-                <div id="b6" class="back-content">
-                    <img class="img" src="./img/cote_1-012.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-        </div>
-        <!-- Paper 7 -->
-        <div id="p7" class="paper">
-            <div class="front">
-                <div id="f7" class="front-content">
-                    <img class="img" src="./img/cote_1-013.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-            <div class="back">
-                <div id="b7" class="back-content">
-                    <img class="img" src="./img/cote_1-014.png" alt="p1" width="100%" height="100%">
-                </div>
-            </div>
-        </div>
+        <script >
+            for(let i = 8; i > 0; i--) {
+                document.write(
+                    '<div id="p' + i + '" class="paper">' +
+                        '<div class="front">' + 
+                            '<div id="f' + i + '" class="front-content">' +
+                                '<img class="img" src="./img/cote_1-0' + (i * 2 - 1) +'.png" alt="p' + (i * 2 - 1) + '" width="100%" height="100%">' +
+                            '</div>' +
+                        '</div>' +
+                        '<div class="back">' + 
+                            '<div id="b' + i + '" class="back-content">' +
+                                '<img class="img" src="./img/cote_1-0' + (i * 2) +'.png" alt="p' + (i * 2) + '" width="100%" height="100%">' +
+                            '</div>' +
+                        '</div>' +
+                    '</div>');
+            }
+        </script>
     </div>
 
     <button id="next-btn">
         <i class="fas fa-arrow-circle-right"></i>
     </button>
-
-
 </body>
 </html>
