--- a/cote_1/index.html
+++ b/cote_1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book</title>
+    <title>Classroom of the Elite Volume 1</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/b0f29e9bfe.js" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
                 }
                 return page;
             }
-            for(let i = 1; i < 8; i++) {
+            for(let i = 1; i < 162; i++) {
                 document.write(
                     '<div id="p' + i + '" class="paper">' +
                         '<div class="front">' + 
