--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <audio autoplay loop>
+  <audio autoplay>
     <source src="https://cdn.pixabay.com/audio/2021/10/21/audio_f8f0b00105.mp3" type="audio/mp3">
   </audio>
   <iframe src="https://indd.adobe.com/view/6167b405-0cb4-44c7-b0b9-fd005159925c" title="Propaganda 2022" width="1920" height="800"></iframe>
