--- a/cote_1/index.html
+++ b/cote_1/index.html
@@ -11,8 +11,8 @@
     <script defer src="./main.js"></script>
 </head>
 <body>
-    
-    <button id="prev-btn">
+    <h1>Test</h1>
+    <!-- <button id="prev-btn">
         <i class="fas fa-arrow-circle-left"></i>
     </button>
 
@@ -47,6 +47,6 @@
 
     <button id="next-btn">
         <i class="fas fa-arrow-circle-right"></i>
-    </button>
+    </button> -->
 </body>
 </html>
