--- a/sample/index.html
+++ b/sample/index.html
@@ -32,7 +32,7 @@
                 <li>
                     <h4>Seksyon Posting</h4>
                     <p>Ito ang mga agarang posting request ng mga seksyon na kinabibilangan ng mga kakapasok na balita at kakatapos na mga laro.</p>
-                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FHJtDu7fXavR1qdFusuM8CZ%2FPostings%3Fnode-id%3D20%253A158%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D20%253A158" allowfullscreen></iframe>
+                    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FHJtDu7fXavR1qdFusuM8CZ%2FPostings%3Fnode-id%3D20%253A158%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D20%253A158%26hide-ui=1" allowfullscreen></iframe>
                 </li>
                 <li>
                     <h4>Artik Posting</h4>
