--- a/sample/index.html
+++ b/sample/index.html
@@ -22,8 +22,9 @@
             <ul>
                 <li>Facebook: <a href="https://www.facebook.com/plaridel.dlsu">Ang Pahayagang Plaridel</a></li>
                 <li>Twitter: <a href="https://twitter.com/Plaridel_DLSU">@Plaridel_DLSU</a></li>
-                <li>Twitter: <a href="https://twitter.com/APPIsports_DLSU">@APPIsports_DLSU</a></li>
+                <li>Isports Twitter: <a href="https://twitter.com/APPIsports_DLSU">@APPIsports_DLSU</a></li>
                 <li>Instagram: <a href="https://www.instagram.com/plaridel_dlsu/">@plaridel_dlsu</a></li>
+                <li>Telegram: <a href="https://t.me/plaridel_dlsu">@plaridel_dlsu</a></li>
             </ul>
         </div>
         <div>
@@ -32,7 +33,7 @@
                 <li>
                     <h4>Seksyon Posting</h4>
                     <p>Ito ang mga agarang posting request ng mga seksyon na kinabibilangan ng mga kakapasok na balita at kakatapos na mga laro.</p>
-                    <iframe width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FHJtDu7fXavR1qdFusuM8CZ%2FPostings%3Fnode-id%3D20%253A158%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D20%253A158%26hide-ui=1"></iframe>
+                    <!-- <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FHJtDu7fXavR1qdFusuM8CZ%2FPostings%3Fnode-id%3D20%253A158%26scaling%3Dscale-down%26page-id%3D0%253A1%26starting-point-node-id%3D20%253A158%26hide-ui=1"></iframe> -->
                 </li>
                 <li>
                     <h4>Artik Posting</h4>
